# projectPractice

sfml.1/: CMakeLists.txt
sfml.1/03/: main.cpp
sfml.2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
sfml.2/00/: Makefile  cmake_install.cmake  main.cpp
sfml.2/01/: Makefile  cmake_install.cmake  main.cpp
sfml.2/02/: Makefile  cmake_install.cmake  main.cpp
sfml.2/sfml2.1/: Makefile  cmake_install.cmake  main.cpp
sfml.2/sfml2.2/: main.cpp
sfml.3/: CMakeLists.txt
sfml.3/00/: main.cpp
sfml.3/02/: main.cpp
sfml.3/03/: main.cpp
sfml.3/sfml3.1/: main.cpp
sfml.3/sfml3.3/: main.cpp
sfml.4/: CMakeLists.txt
sfml.4/workshop1.1/: CMakeLists.txt  main.cpp
sfml.4/workshop1.2/: CMakeLists.txt  main.cpp
sfml.4/workshop1.3/: CMakeLists.txt  main.cpp
sfml.4/workshop1.4/: CMakeLists.txt  main.cpp
